[tool.poetry]
name = "nonebot_plugin_pwalineup"
version = "0.0.1"
description = "完美平台组队小帮手"
authors = ["Healock <admin@hea1ock.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/Healock/nonebot_plugin_pwalineup"
repository = "https://github.com/Healock/nonebot_plugin_pwalineup"
keywords = ["csgo", "nonebot2", "plugin"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE","README.md"
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc4"
nonebot-adapter-onebot = ">=2.1.5"
nonebot_plugin_apscheduler = ">=0.2.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
